:bug: Fix wrapping box content

--- a/scss/components/box.scss
+++ b/scss/components/box.scss
@@ -20,6 +20,7 @@
     &-footer,
     &-content {
         display: flex;
+        flex-wrap: wrap;
         flex-direction: row;
     }
 
