--- a/scss/utils/display/flex.scss
+++ b/scss/utils/display/flex.scss
@@ -1,3 +1,6 @@
 .is-flex {
     display: flex;
+
+    flex-wrap: inherit;
+    flex-grow: 1;
 }
